--- a/AutoProxy/MainWindow.xaml
+++ b/AutoProxy/MainWindow.xaml
@@ -10,18 +10,31 @@
     Height="600"
     mc:Ignorable="d">
     <Grid>
-        <StackPanel VerticalAlignment="Center">
+        <StackPanel Margin="20,0" VerticalAlignment="Center">
+
+            <Label>Port:</Label>
+            <TextBox Text="{Binding proxy.Port}" />
+
+            <Label>Delay:</Label>
+            <TextBox Text="{Binding proxy.Delay}" />
+
+            <CheckBox Margin="0,4,0,0" IsChecked="{Binding proxy.AutoSwitching}">Auto Switching</CheckBox>
+
+            <Grid Margin="0,20,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" Command="{Binding proxy.ConnectCommand}">Connect</Button>
+                <Button Grid.Column="1" Command="{Binding proxy.DisconnectCommand}">Disconnect</Button>
+            </Grid>
 
             <TextBlock
+                Margin="0,40,0,0"
                 HorizontalAlignment="Center"
                 FontSize="16"
-                Text="{Binding proxy.Status}" />
-
-            <ToggleButton
-                Width="70"
-                Height="70"
-                Margin="0,10,0,0"
-                IsChecked="{Binding proxy.IsConnected, Mode=TwoWay}" />
+                Text="{Binding proxy.Status, Delay=100}" />
         </StackPanel>
     </Grid>
 </Window>
