--- a/AutoProxy/MainWindow.xaml
+++ b/AutoProxy/MainWindow.xaml
@@ -7,13 +7,16 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
     Width="400"
-    Loaded="Window_Loaded"
     Height="600"
+    Loaded="Window_Loaded"
     mc:Ignorable="d">
     <Grid>
         <StackPanel Margin="20,0" VerticalAlignment="Center">
 
-            <TextBlock FontSize="24" Text="{Binding proxy.Status}" />
+            <TextBlock
+                FontSize="18"
+                Text="{Binding proxy.Status}"
+                TextAlignment="Center" />
 
 
             <Label Margin="0,40,0,0">Port:</Label>
@@ -22,7 +25,7 @@
             <Label>Delay:</Label>
             <TextBox Text="{Binding proxy.auto.Delay}" />
 
-            <CheckBox Margin="0,4,0,0" IsChecked="{Binding proxy.auto.AutoSwitching}">Auto Switching</CheckBox>
+            <CheckBox Margin="0,4,0,0" IsChecked="{Binding proxy.auto.AutoSwitching}">Auto Mode</CheckBox>
 
             <Grid Margin="0,20,0,0">
                 <Grid.ColumnDefinitions>
