--- a/AutoProxy/MainWindow.xaml
+++ b/AutoProxy/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:AutoProxy"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    Title="Proxy to VPN"
     Width="400"
     Height="600"
     Loaded="Window_Loaded"
@@ -28,20 +28,33 @@
             <Label Margin="0,40,0,0">Port:</Label>
             <TextBox Text="{Binding proxy.Port}" />
 
-            <Label>Delay:</Label>
+            <Label>Delay (seconds):</Label>
             <TextBox Text="{Binding proxy.auto.Delay}" />
 
-            <CheckBox Margin="0,4,0,0" IsChecked="{Binding proxy.auto.AutoMode}">Auto Mode</CheckBox>
 
-            <Grid Margin="0,20,0,0">
+            <ToggleButton
+                Grid.Column="0"
+                Height="32"
+                Margin="0,20,0,0"
+                IsChecked="{Binding proxy.auto.AutoMode}">
+                Auto Mode
+            </ToggleButton>
+
+
+            <Grid Height="32" Margin="0,10,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="10" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0" Command="{Binding proxy.manual.ConnectCommand}">Connect</Button>
-                <Button Grid.Column="1" Command="{Binding proxy.manual.DisconnectCommand}">Disconnect</Button>
+                <Button Grid.Column="2" Command="{Binding proxy.manual.DisconnectCommand}">Disconnect</Button>
             </Grid>
+
+            <Button Height="32" Margin="0,10,0,0" Click="AboutMe_Click">
+                About Me
+            </Button>
 
             <ScrollViewer
                 x:Name="sclOutput"
